[package]
name = "tradingview_client"
version = "0.1.0"
edition = "2021"

[features]
default = ["futures-lite"]
futures = ["dep:futures"]
futures-lite = ["dep:futures-lite"]

[dependencies]
# async
futures = { version = "0.3.0", optional = true }
futures-lite = { version =  "2.3.0", optional = true }
async-io = "2.3.4"
async-lock = "3.4.0"
async-trait = "0.1.83"
# logging
log = "0.4.20"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"
# websocket
websocket_client = { git = "https://github.com/brandonros/websocket_client.git", rev = "013815a13de23881f98b3c9e346ab2ce7be4e0b2" }
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git", rev = "60bde76d4d80379762758d32ff7bfecaf6c58a12" }
# json
miniserde = "0.1.40"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# env
dotenvy = "0.15.7"
