[package]
name = "tradingview_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-lock = "3.4.0"
async-trait = "0.1.83"
# logging
log = "0.4.20"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"
# websocket
websocket_client = { git = "https://github.com/brandonros/websocket_client.git", rev = "c66360be416cecf26b1ff2579e65e99d8131f3a6" }
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git", rev = "52cf9005c87ff069a098af9365dcd7a60e276792" }
# json
miniserde = "0.1.40"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# env
dotenvy = "0.15.7"
